--- a/requestbin/templates/layout.html
+++ b/requestbin/templates/layout.html
@@ -16,7 +16,7 @@
 
     <div class="runscope-wrap">
         <div class="row-fluid">
-            <p class="tagline">A <a href="https://www.runscope.com?utm_source=partner&amp;utm_medium=link&amp;utm_campaign=requestbin" title="Runscope API Tools"><strong>Runscope</strong></a> community project. <a href="mailto:requestbin@runscope.com">Send us feedback!</a></p>
+            <p class="tagline">A <a href="https://github.com/kingster/requestbin"><strong>OpenSource</strong></a> community project. </a></p>
         </div>
     </div>
     <div class="header-wrap">
@@ -69,33 +69,15 @@
     <div class="footer-wrap">
         <footer class="row-fluid">
             <div class="span12">
-                <div class="footer-logo">
-                    <img src="/static/img/logo-runscope-2x.png" height="34" width="34">
-                </div>
+               
                 <h3 class="footer-slogan">
                   RequestBin is brought to you by Runscope.<br>Solve API errors fast. Debug, test and share your API calls.
-                  <br>
-                  <a href="https://www.runscope.com/?utm_source=partner&amp;utm_medium=link&amp;utm_campaign=requestbin">Learn more <i class="icon-long-arrow-right"></i></a>
                 </h3>
 
-                <p class="footer-hero">
-                    <a href="https://www.runscope.com/?utm_source=partner&amp;utm_medium=link&amp;utm_campaign=requestbin" title="Learn More"><img src="/static/img/runscope-hero.png"></a>
-                </p>
-
-                <ul class="footer-menu">
-                    <li class="footer-link footer-title">Runscope</li>
-                    <li class="footer-link"><a href="https://www.runscope.com/?utm_source=partner&amp;utm_medium=link&amp;utm_campaign=requestbin" title="Learn More">Learn More</a></li>
-                    <li class="footer-link"><a href="http://blog.runscope.com" title="Runscope Blog">Blog</a></li>
-                    <li class="footer-link"><a href="https://twitter.com/Runscope" title="Follow Runscope on Twitter">Twitter</a></li>
-                    <li class="footer-link"><a href="https://plus.google.com/110044295418761600228" rel="publisher">Google+</a></li>
-                    <li class="footer-link"><a href='https://alpha.app.net/runscope' rel='me'>App.net</a></li>
-                </ul>
-                <p class="copyright">RequestBin originally created by <a href="http://progrium.com">Jeff Lindsay</a>.</p>
-                <p class="copyright">&copy; 2013 Runscope Inc. - <a href="https://www.runscope.com/privacy?utm_source=partner&amp;utm_medium=link&amp;utm_campaign=requestbin">Privacy Policy</a> - <a href="https://www.runscope.com/terms?utm_source=partner&amp;utm_medium=link&amp;utm_campaign=requestbin">Terms of Service</a></p>
+                <p class="copyright">RequestBin originally created by <a href="http://progrium.com">Jeff Lindsay</a>. <br>MIT Licence</p>
             </div>
         </footer>
     </div>
-
     {% block script %}
     {% endblock %}
   </body>
