--- a/requestbin/templates/layout.html
+++ b/requestbin/templates/layout.html
@@ -10,6 +10,7 @@
     <link type="text/css" href="/static/css/prettify.css" rel="stylesheet" />
     <script type="text/javascript" src="/static/js/jquery.min.js"></script>
     <script type="text/javascript" src="/static/js/prettify.js"></script>
+    <script type="text/javascript" src="/static/js/app.js"></script>
     {% block head %}{% endblock %}
   </head>
   <body onload="prettyPrint()">
